# monitor_music

./: .gitignore  CMakeLists.txt  README.md  config.ini  res.qrc
include/: localsql.h  lyricwidget.h  mainwindow.h  onlinerequest.h  utils.h
src/: localsql.cpp  lyricwidget.cpp  mainwindow.cpp  mainwindow.ui  onlinerequest.cpp  utils.cpp
